# crosscontract

./: .pre-commit-config.yaml  LICENSE  README.md  main_dev.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion---design-proposal.md  documentation-request.md  feature_request.md  improvement.md  maintenance---chore.md  qa---test-case.md
.github/workflows/: check_pr_dev_branch.yml  ci.yml  deploy_docs.yml  release_main_branch.yml  test_and_coverage.yml
docs/: about.md  index.md
docs/client/: index.md
docs/contracts/: index.md
docs/reference/: client.md  contracts.md
notebooks/: client_tutorial.ipynb
src/crosscontract/: __init__.py
src/crosscontract/contracts/: __init__.py  utils.py  valid_items.py
src/crosscontract/contracts/contracts/: __init__.py  base_contract.py  cross_contract.py
src/crosscontract/contracts/schema/: __init__.py  converter.py  schema.py
src/crosscontract/contracts/schema/exceptions/: __init__.py  validation_error.py
src/crosscontract/contracts/schema/field_descriptors/: __init__.py  descriptors.py  field_descriptors.py
src/crosscontract/contracts/schema/fields/: __init__.py  base.py  datetime_field.py  list_field.py  numeric_field.py  string_field.py
src/crosscontract/contracts/schema/reference/: __init__.py  foreign_key.py  primary_key.py
src/crosscontract/contracts/schema/validation/: validate_pandas_dataframe.py
src/crosscontract/crossclient/: __init__.py  crossclient.py  logger.py
src/crosscontract/crossclient/exceptions/: __init__.py  exception_factory.py  exceptions.py
src/crosscontract/crossclient/services/: __init__.py  contract_resource.py  contract_service.py
src/tests/: __init__.py
src/tests/contracts/: frictionless_package_standard_v2.json  frictionless_table_standard_v1.json  frictionless_table_standard_v2.json  simple_contract.yaml  test_utils.py
src/tests/contracts/contracts/: test_contracts.py
src/tests/contracts/contracts/validation/: test_pandas_validation.py
src/tests/contracts/schema/: test_converter.py  test_descriptors.py  test_schema.py
src/tests/crossclient/: conftest.py  test_crossclient.py
src/tests/crossclient/contracts/: test_contract_resource.py  test_contracts_service.py
src/tests/crossclient/exceptions/: test_exception_factory.py  test_exceptions.py
(+8 files in other folders)
