[project]
name = "crosscontract"
version = "0.1.0"
description = "Provides data contracts with frictionless schemas and client to interact with CROSS data platform.   "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pandas>=2.3.3",
    "pandera[pandas]>=0.28.1",
    "pre-commit>=4.5.1",
    "pyarrow>=22.0.0",
    "pydantic[email]>=2.12.5",
    "ruff>=0.14.11",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "types-pyyaml>=6.0.12.20250915",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]

#-------- Build System Configuration --------#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crosscontract"]

# Hatch usually includes py.typed automatically if it's in the package,
# but if it doesn't, you can force it like this:
[tool.hatch.build]
include = ["src/crosscontract/py.typed"]

#-------- Ruff Configuration --------#
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff]
exclude = ["notebooks", "backend/alembic"]


#-------- Pytest Configuration --------#
[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning --tb=no --log-level=WARNING"
testpaths = ["src/tests"]
pythonpath = "src"


#-------- Coverage Configuration --------#
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = [
    # exclude test folders
    "src/tests/*",
]
exclude_lines = [
    "pragma: no cover",
    "pass  # pragma: no cover",
    "^\\s*pass\\s*$",            # Standalone pass statements
    "^\\s*\\.\\.\\.\\s*$",       # Standalone ellipsis
    "raise NotImplementedError", # Abstract method implementations
]

#-------- Mypy Configuration --------#
[tool.mypy]
exclude = ["src/tests/"]
#disable_error_code = ["misc"]
